--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>IGTLab Faculty</title>
+		<title>IGTLab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,7 +23,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Andrew Mindermann</h1>
-						<p>GIS Analyst</p>
+						<p>UTC &nbsp;&bull;&nbsp; IGTLab &nbsp;&bull;&nbsp; GIS Analyst</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
