Update index.html - 3/23 (2)
Changes to href list in header

--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Andrew Mindermann</h1>
-						<p>UTC &nbsp;&bull;&nbsp; IGTLab &nbsp;&bull;&nbsp; GIS Analyst</p>
+						<p>UTC &nbsp;&bull;&nbsp; GIS Analyst &nbsp;&bull;&nbsp; IGTLab</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/andrew__mann" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/amann715" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:andrew-mindermann@utc.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
